--- a/python/Python_Basics.ipynb
+++ b/python/Python_Basics.ipynb
@@ -8,12 +8,14 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Python programs are executred using the Python interpreter.  THe interpreter can execute Python programs in either interactive mode or script mode.\n",
-    "Interfactive mode is useful for testing in either single statements or small code segments\n",
-    "In Jupyter notebook, press the tab key for auto-suggestion feature."
+    "Python programs are executed using the Python interpreter.  The interpreter can execute Python programs in either interactive mode or script mode.\n",
+    "\n",
+    "Interfactive mode is useful for testing in either single statements or small code segments. In Jupyter notebook, press the tab key for auto-suggestion feature.\n",
+    "\n",
+    "Script mode is used to execute Python programs stored in text files.  To execute the program, enter the command \"python xyz.py\" at the command prompt.  The causes the Python interpreter to run in script mode, which reads the text file and executes the statements contained within the file."
    ]
   },
   {
@@ -26,18 +28,9 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "Script mode is used to execute Python programs stoed in text files.  To execued the program, enter the command python xyz.py at the command prompt.  The causes the Python interpreter to run in script mode, which reads the text file and executes the statements contained within the file"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "Primitive Types"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -48,12 +41,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Python is a dynamically-typed language.  \n",
-    "# We don not know the type of a variable until we run it\n",
+    "# Python is a dynamically-typed language.  \n",
+    "# We do not know the type of a variable until we run it\n",
     "# Do not need to declare the type of a variable\n",
     "\n",
     "x = 6                 # int\n",
@@ -68,9 +61,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
    "source": [
     "print(x)\n",
     "print(type(x))"
@@ -78,9 +80,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25.45\n",
+      "<class 'float'>\n"
+     ]
+    }
+   ],
    "source": [
     "print(y)\n",
     "print(type(y))"
@@ -88,9 +99,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
    "source": [
     "print(msg)\n",
     "print(type(msg))"
@@ -98,9 +118,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "e\n",
+      "Hel\n",
+      "o\n",
+      "e\n",
+      "Hell\n"
+     ]
+    }
+   ],
    "source": [
     "# string slicing\n",
     "print(msg[1])  # print 2nd from the start (index starts from 0)\n",
@@ -112,9 +144,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Good morning\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
    "source": [
     "print(msg1)\n",
     "print(type(msg1))"
@@ -122,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,11 +174,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "x =3\n",
     "print (x == 4)"
@@ -145,13 +194,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Good morning, John!\n"
+     ]
+    }
+   ],
    "source": [
     "# placeholders defined by a pair of curly braces { } into a string and calling the str.format()\n",
     "name = input(\"What is your name?\")\n",
-    "print(\"Good morning {0}{1}\".format(name, \"!\") ) "
+    "print(\"Good morning, {0}{1}\".format(name, \"!\") ) "
    ]
   },
   {
@@ -994,7 +1051,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
