--- a/text processing/text_processing.ipynb
+++ b/text processing/text_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,12 +21,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Run code below once to download NLTK resources."
+    "Ensure that our NLTK resources are available. Run code below once to download NLTK resources. NLTK's '*stopwords*' is used for removing stop-words in our corpus and the '*wordnet*' dictionary is used for stemming."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,19 +60,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**CODE TINKERING: Bag of Words (BOW)**"
+    "___"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In our example, there are only 3 documents in our corpus."
+    "# CODE TINKERING: Bag of Words (BOW)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Each entry in the 'docs' array represents a document in our corpus. Hence, we have 3 documents in our corpus and they will be used for Bag-Of-Words, TF-IDF and Cosine Similarity computations."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,12 +94,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Prepare Stemmer and Stop-Words."
+    "Preparing for Stemming and Stop-Words removal."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -114,12 +121,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Perform data cleansing."
+    "We place the pre-processing code in a function as it will be used by Bag-of-Words, TF-IDF and Cosine Similarity. The function removes stop-words and punctuations, convert each term to lowercase and apply stemming."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,8 +146,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's take a peek at our documents after pre-processing."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +163,7 @@
        "['john cat', 'cat cat eat fish', 'eat big fish']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,12 +176,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Generate our Feature Vectors using Bag of Words."
+    "Using NLTK's CountVectorizer, we generate our BOW feature vectors via Bag-of-Words technique. The output array shows the frequency-count of terms in each document."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +192,7 @@
        "       [1, 0, 1, 1, 0]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,27 +209,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "View our vocabulary (every unique word in our corpus is a feature)"
+    "We can view our vocabulary (every unique word in our corpus is a feature) by asking for the feature names in the BOW matrix."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['big', 'cat', 'eat', 'fish', 'john']"
+       "array(['big', 'cat', 'eat', 'fish', 'john'], dtype=object)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "vocab = bow.get_feature_names()\n",
+    "vocab = bow.get_feature_names_out()\n",
     "vocab"
    ]
   },
@@ -223,12 +237,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pretty-print our BOW results by combining our vocabulary and feature-vectors into a Pandas' dataframe."
+    "Let's pretty-print our BOW results by combining our vocabulary and feature-vectors into a Pandas' dataframe. Here, we can see the frequency-count against each term in a document much cleanly."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +309,7 @@
        "doc3    1    0    1     1     0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,19 +327,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**CODE TINKERING: TF-IDF**"
+    "___"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Generate feature vectors using TF-IDF."
+    "# CODE TINKERING: TF-IDF"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using NLTK's TfidfVectorizer, we generate a feature-vector for each document in our corpus."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +357,7 @@
        "       [0.68091856, 0.        , 0.51785612, 0.51785612, 0.        ]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,27 +373,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "View our vocabulary."
+    "We can view the unique tokens in our corpus (aka Vocabulary) by querying the feature names in TF-IDF matrix. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['big', 'cat', 'eat', 'fish', 'john']"
+       "array(['big', 'cat', 'eat', 'fish', 'john'], dtype=object)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "vocab = tfidf.get_feature_names()\n",
+    "vocab = tfidf.get_feature_names_out()\n",
     "vocab"
    ]
   },
@@ -380,12 +401,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pretty-print our TF-IDF results."
+    "We place our TF-IDF feature vectors in a Pandas DataFrame to visualize the data easily. Notice that for document 1, the values in its feature vector that corresponds to 'big', 'eat', and 'fish' are all zeros as document 1 does not contain such terms. In addition, note the high value of 0.816 for the term 'cat' in document 2's feature vector due to the two occurences of 'cat' in its content."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +473,7 @@
        "doc3  0.680919  0.000000  0.517856  0.517856  0.000000"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,19 +490,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**CODE TINKERING: Cosine Similarity**"
+    "___"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Given a query string, compare it with the corpus for similarity."
+    "# CODE TINKERING: Cosine Similarity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We now use 3 different query strings, stored in the 'query' array, to compare against the 3 documents in our corpus for similarity."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,12 +524,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Preprocess our query string."
+    "Like before, we pre-process our query strings to remove stop-words and punctuations, and to apply stemming. The output shows the query-strings after pre-processing. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +538,7 @@
        "['cat fish', '', 'john']"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,13 +552,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use TF-IDF feature-vectors in our Cosine Similarity computation\n",
-    "."
+    "We then generate the TF-IDF feature-vectors for the 3 query strings using the earlier computed TF-IDF weights from our corpus. The TF-IDF weights were obtained when we perform a tfidf.fit_transform() in an early step (under section CODE TINKERING: TF-IDF)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +568,7 @@
        "       [0.        , 0.        , 0.        , 0.        , 1.        ]])"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,12 +582,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pretty-print our query's feature vector."
+    "Now we use a DataFrame to pretty-print our 3 query strings' TF-IDF feature vectors. Remember that each query-string's feature vector has the same dimension as the vocabulary in our corpus. Since we have 5 tokens in our vocabulary, the dimension for each query-string's feature vector is 5."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +654,7 @@
        "q3  0.0  0.000000  0.0  0.000000   1.0"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -644,12 +671,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Compute Cosine Similarity between the feature vectors."
+    "Next, we compute Cosine Similarity of the 3 query-strings' TF-IDF feature vectors against the 3 documents in our corpus. Notice that the first query-string is most similar to 'doc2', having a cosine similarity value of 0.866. The third query-string is most similar to 'doc1', with a cosine similarity value of 0.796. However, the second query-string is not similar to any of the 3 documents as non of the words in its query-string is found in our corpus. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +735,7 @@
        "cs3  0.795961  0.000000  0.00000"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,26 +748,6 @@
     "                columns=['doc1', 'doc2', 'doc3'])\n",
     "\n",
     "cs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['john cat', 'cat cat eat fish', 'eat big fish']"
-      ]
-     },
-     "execution_count": 94,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "docs_clean"
    ]
   }
  ],
@@ -763,7 +770,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.9"
   },
   "orig_nbformat": 4
  },
