--- a/neural networks/nn/banknotes_wshop/banknotes_fraud_detect.ipynb
+++ b/neural networks/nn/banknotes_wshop/banknotes_fraud_detect.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This Jupyter notebook trains a Neural Network to detect counterfeits from genuine ones."
+    "##### This Jupyter notebook trains a Neural Network to detect counterfeits from genuine ones."
    ]
   },
   {
