--- a/pandas/Pandas2.ipynb
+++ b/pandas/Pandas2.ipynb
@@ -4,19 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pandas 2"
+    "# DataFrames in Pandas"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Adding columns, deleting columns, and slicing the data"
+    "Adding columns, deleting columns, and slicing data in Pandas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,90 +26,471 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>col1</th>\n",
+       "      <th>col2</th>\n",
+       "      <th>col3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>100</td>\n",
+       "      <td>M</td>\n",
+       "      <td>John</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>200</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Mary</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   col1 col2  col3\n",
+       "0   100    M  John\n",
+       "1   200    F  Mary"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "col1 = [100,200]  # a list\n",
-    "col2=[\"M\",\"F\"]\n",
-    "col3=[\"Tin\",\"Esther\"]\n",
+    "col1 = [100, 200]  # a list\n",
+    "col2=['M', 'F']\n",
+    "col3=['John', 'Mary']\n",
     "\n",
     "# a dictionary\n",
-    "data = { \"c1\" : col1,\n",
-    "         \"c2\" : col2,\n",
-    "         \"c3\" : col3 \n",
+    "data = { 'c1' : col1,\n",
+    "         'c2' : col2,\n",
+    "         'c3' : col3 \n",
     "       }\n",
     "\n",
     "# Create dataframe\n",
     "df = pd.DataFrame(data)\n",
-    "df.columns = [\"col1\", \"col2\", \"col3\"]\n",
+    "df.columns = ['col1', 'col2', 'col3']\n",
+    "\n",
     "df"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Apply a function to each row of a column and create a new column."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>col1</th>\n",
+       "      <th>col2</th>\n",
+       "      <th>col3</th>\n",
+       "      <th>col2_full</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>100</td>\n",
+       "      <td>M</td>\n",
+       "      <td>John</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>200</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Mary</td>\n",
+       "      <td>Female</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   col1 col2  col3 col2_full\n",
+       "0   100    M  John      Male\n",
+       "1   200    F  Mary    Female"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def myfunction(x):\n",
-    "    if x == \"M\":\n",
-    "        return \"Male\"\n",
+    "    if x == 'M':\n",
+    "        return 'Male'\n",
     "    else:\n",
-    "        return \"Female\"\n",
+    "        return 'Female'\n",
     "    \n",
     "df[\"col2_full\"] = df.col2.apply(myfunction)\n",
+    "\n",
     "df"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Delete a column from a DataFrame."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>col1</th>\n",
+       "      <th>col2</th>\n",
+       "      <th>col3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>100</td>\n",
+       "      <td>M</td>\n",
+       "      <td>John</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>200</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Mary</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   col1 col2  col3\n",
+       "0   100    M  John\n",
+       "1   200    F  Mary"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "del df[\"col2_full\"]\n",
+    "\n",
     "df"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "df['NewCol'] =6\n",
+    "Add a new column into a DataFrame."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>col1</th>\n",
+       "      <th>col2</th>\n",
+       "      <th>col3</th>\n",
+       "      <th>NewCol</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>100</td>\n",
+       "      <td>M</td>\n",
+       "      <td>John</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>200</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Mary</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   col1 col2  col3  NewCol\n",
+       "0   100    M  John       6\n",
+       "1   200    F  Mary       6"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['NewCol'] = 6\n",
+    "\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>col1</th>\n",
+       "      <th>col2</th>\n",
+       "      <th>col3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>100</td>\n",
+       "      <td>M</td>\n",
+       "      <td>John</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>200</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Mary</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   col1 col2  col3\n",
+       "0   100    M  John\n",
+       "1   200    F  Mary"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "del df['NewCol']\n",
+    "\n",
     "df"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Display the index of a DataFrame. Our DataFrame only has two rows, and the two indices are 0 and 1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RangeIndex(start=0, stop=2, step=1)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.index  # index (row labels) of the DataFrame."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "i = ['a' , 'b']\n",
-    "df.index = i  # change the name of the index                \n",
-    "df.columns =[\"Credit\",\"Gender\", \"Name\"] # change the name of the column\n",
+    "The 'columns' and 'index' values can be changed as shown;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Credit</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>a</th>\n",
+       "      <td>100</td>\n",
+       "      <td>M</td>\n",
+       "      <td>John</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>b</th>\n",
+       "      <td>200</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Mary</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Credit Gender  Name\n",
+       "a     100      M  John\n",
+       "b     200      F  Mary"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.index = ['a', 'b']  # change the name of the index                \n",
+    "df.columns =['Credit', 'Gender', 'Name'] # change the name of the column\n",
+    "\n",
     "df"
    ]
   },
@@ -129,7 +510,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.iloc[0,1] # row 0, column 1"
+    "df.iloc[0, 1] # row 0, column 1"
    ]
   },
   {
@@ -232,7 +613,9 @@
     "            'age'   : [10, 10, 11, 12],\n",
     "            'marks' : [70, 80, 80, np.nan],\n",
     "            'level' : ['1','1','2', '2']}\n",
+    "\n",
     "df = pd.DataFrame(students)\n",
+    "\n",
     "df"
    ]
   },
@@ -253,7 +636,7 @@
    "outputs": [],
    "source": [
     "# select a number of rows\n",
-    "df [(df[\"age\"] <11) | (df[\"age\"] > 11)  ]"
+    "df [(df['age'] < 11) | (df['age'] > 11)  ]"
    ]
   },
   {
@@ -263,7 +646,8 @@
    "outputs": [],
    "source": [
     "# select a number of rows and interested only in a specific columns\n",
-    "df_old = df.loc[df[\"age\"] > 10, [\"name\", \"age\"]]\n",
+    "df_old = df.loc[df['age'] > 10, ['name', 'age']]\n",
+    "\n",
     "df_old"
    ]
   },
@@ -274,7 +658,7 @@
    "outputs": [],
    "source": [
     "# check for missing data - isnull()\n",
-    "df[\"marks\"].isnull()"
+    "df['marks'].isnull()"
    ]
   },
   {
@@ -284,7 +668,8 @@
    "outputs": [],
    "source": [
     "# extract those rows with missing marks\n",
-    "df_missing_marks = df [(df[\"marks\"].isnull()) ]\n",
+    "df_missing_marks = df [(df['marks'].isnull())]\n",
+    "\n",
     "df_missing_marks"
    ]
   },
@@ -296,7 +681,8 @@
    "source": [
     "# extract those rows with marks \n",
     "# notna() : detect existing (non-missing) values.\n",
-    "df_new = df [(df[\"marks\"].notna()) ]\n",
+    "df_new = df [(df['marks'].notna()) ]\n",
+    "\n",
     "df_new"
    ]
   },
@@ -324,7 +710,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.8.7"
   }
  },
  "nbformat": 4,
