--- a/pandas/Pandas3.ipynb
+++ b/pandas/Pandas3.ipynb
@@ -4,14 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pandas 3"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "Grouby function will be explored"
+    "# Grouping in Pandas"
    ]
   },
   {
