--- a/pandas/Pandas1.ipynb
+++ b/pandas/Pandas1.ipynb
@@ -8,7 +8,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Pandas is a Python packages with a number of data analysis tools.\n",
@@ -33,7 +33,7 @@
    "outputs": [],
    "source": [
     "# A series is a one-dimensional array.  It is possible to change the value but not the size of the series\n",
-    "series1 = pd.Series([10,20,30])\n",
+    "series1 = pd.Series([10, 20, 30])\n",
     "print(series1)  # output: first column - indexes of the elements\n",
     "                #         second column - the elements"
    ]
@@ -49,7 +49,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "names = np.array(['Esther','Tin','Nicholas','Michael'])\n",
+    "names = np.array(['John', 'Mary', 'James', 'Lisa'])\n",
     "s2 = pd.Series(names)\n",
     "print(s2)\n"
    ]
@@ -62,10 +62,11 @@
    "source": [
     "# Dataframe resembles a table\n",
     "df = pd.DataFrame ({\n",
-    "    \"Name\": ['Esther','Tin','Nicholas','Michael'],\n",
-    "    \"Age\" : [21,25, 26, 28],\n",
+    "    \"Name\": ['John', 'Mary', 'James', 'Lisa'],\n",
+    "    \"Age\" : [21, 25, 26, 28],\n",
     "    \"PhoneNumber\" : ['65160001', '65160002', '65160003', '65160004']\n",
     "})\n",
+    "\n",
     "print(df)"
    ]
   },
@@ -75,7 +76,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "numList =[1,2,3,4]\n",
+    "numList =[1, 2, 3, 4]\n",
+    "\n",
     "df = pd.DataFrame(numList)\n",
     "print(df)\n",
     "print(df.dtypes)"
@@ -87,7 +89,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "names =  [['Derek', 7000], ['Wendy', 3000], ['Nicholas', 6000], ['Michael', 8000]]\n",
+    "names =  [['John', 7000], ['Mary', 3000], ['James', 6000], ['Lisa', 8000]]\n",
     "    \n",
     "df = pd.DataFrame(names, columns =['Name', 'Salary'], dtype=float)    # set the datatype (Age) to float\n",
     "print(df)\n",
@@ -135,7 +137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Location = \"Person.csv\""
+    "Location = 'Person.csv'"
    ]
   },
   {
@@ -154,7 +156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(Location, names= ['Names', 'Salary'])   # read file and specify column title\n",
+    "df = pd.read_csv(Location, names=['Names', 'Salary'])   # read file and specify column title\n",
     "df"
    ]
   },
@@ -166,7 +168,7 @@
    "source": [
     "max_value = df.Salary.max()            # get max value for the column\n",
     "\n",
-    "df[\"Names\"] [df.Salary == max_value]"
+    "df['Names'] [df.Salary == max_value]"
    ]
   },
   {
@@ -184,7 +186,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[\"Names\"]"
+    "df['Names']"
    ]
   },
   {
@@ -218,7 +220,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[\"Salary\"]"
+    "df['Salary']"
    ]
   },
   {
@@ -227,7 +229,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[\"Salary\"].mean()  # get average"
+    "df['Salary'].mean()  # get average"
    ]
   },
   {
@@ -247,7 +249,7 @@
    },
    "outputs": [],
    "source": [
-    "Sorted = df.sort_values(['Salary'], ascending = False)\n",
+    "Sorted = df.sort_values(['Salary'], ascending=False)\n",
     "Sorted.head(2)  # top sa salaried person"
    ]
   },
@@ -259,7 +261,7 @@
    },
    "outputs": [],
    "source": [
-    "df[\"Salary\"].mean()"
+    "df['Salary'].mean()"
    ]
   },
   {
